--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <header><h1>CalcMaster</h1></header>
+    <header>
+        <h1>CalcMaster</h1>
+    </header>
 
     <div class="container">
 
