--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="buttons">
 
             <div class="button" id="clearAll">C</div>
-            <div class="button" id="%">%</div>
-            <div class="button" id="backspace"><i class="fas fa-backspace"></i></div>
+            <div class="button" id="leftPth">(</div>
+            <div class="button" id="rightPth">)</div>
             <div class="button" id="*">*</div>
             <div class="button" id="7">7</div>
             <div class="button" id="8">8</div>
@@ -40,7 +40,8 @@
             <div class="button" id="+">+</div>
             <div class="button" id="0">0</div>
             <div class="button" id=".">.</div>
-            <div class="button" style="width: 50%;" id="equals">=</div>
+            <div class="button" id="backspace"><i class="fas fa-backspace"></i></div>
+            <div class="button" id="equals">=</div>
 
         </div>
 
