--- a/index.html
+++ b/index.html
@@ -14,37 +14,43 @@
         <h1>CalcMaster</h1>
     </header>
 
-    <div class="container">
+    <div class="row">
+        <div class="container">
 
-        <div class="screen">
-            <p id="screenDisplay"></p>
+            <div class="screen">
+                <p id="screenDisplay"></p>
+
+            </div>
+            <div class="buttons">
+
+                <div class="button" id="clearAll">C</div>
+                <div class="button" id="leftPth">(</div>
+                <div class="button" id="rightPth">)</div>
+                <div class="button" id="*">*</div>
+                <div class="button" id="7">7</div>
+                <div class="button" id="8">8</div>
+                <div class="button" id="9">9</div>
+                <div class="button" id="/">/</div>
+                <div class="button" id="4">4</div>
+                <div class="button" id="5">5</div>
+                <div class="button" id="6">6</div>
+                <div class="button" id="-">-</div>
+                <div class="button" id="1">1</div>
+                <div class="button" id="2">2</div>
+                <div class="button" id="3">3</div>
+                <div class="button" id="+">+</div>
+                <div class="button" id="0">0</div>
+                <div class="button" id=".">.</div>
+                <div class="button" id="backspace"><i class="fas fa-backspace"></i></div>
+                <div class="button" id="equals">=</div>
+
+            </div>
 
         </div>
-        <div class="buttons">
 
-            <div class="button" id="clearAll">C</div>
-            <div class="button" id="leftPth">(</div>
-            <div class="button" id="rightPth">)</div>
-            <div class="button" id="*">*</div>
-            <div class="button" id="7">7</div>
-            <div class="button" id="8">8</div>
-            <div class="button" id="9">9</div>
-            <div class="button" id="/">/</div>
-            <div class="button" id="4">4</div>
-            <div class="button" id="5">5</div>
-            <div class="button" id="6">6</div>
-            <div class="button" id="-">-</div>
-            <div class="button" id="1">1</div>
-            <div class="button" id="2">2</div>
-            <div class="button" id="3">3</div>
-            <div class="button" id="+">+</div>
-            <div class="button" id="0">0</div>
-            <div class="button" id=".">.</div>
-            <div class="button" id="backspace"><i class="fas fa-backspace"></i></div>
-            <div class="button" id="equals">=</div>
-
+        <div class="history" id="history">
+            
         </div>
-
     </div>
 
     <script src="script.js"></script>
